# countdown-todo

./: .gitignore  .gitlab-ci.yml  PRD.md  README.md
.github/workflows/: ci.yml
app/: app.js  index.html  styles.css
app/src/: README.md  invoke-bridge.mjs  invoke-bridge.test.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: command.rs  desktop.rs  error.rs  lib.rs  main.rs  model.rs  repository.rs  service.rs
task/: COORDINATION.md  OUT_A_command_contract_v0.md  OUT_B_csv_persistence_v0.md  OUT_C_ui_state_v0.md  OUT_D_acceptance_gate_v0.md  PHASES.md  README.md  T01_bootstrap_tauri.md  T02_data_model_csv.md  T03_backend_commands.md  T04_ui_shell_timer.md  T05_mark_flow.md  T06_todo_linkage.md  T07_restart_reliability.md  agent_A_log.md  agent_B_log.md  agent_C_log.md  agent_D_log.md
